# ptah

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
demos/: camera_control.cpp  ferris_wheel.cpp  lights.cpp  model_import.cpp  triangle.cpp
include/: camera.hpp  context.hpp  data_buffer.hpp  demo.hpp  draw_command.h  draw_command.hpp  handle.hpp  input.hpp  material.hpp  material_instance.hpp  material_props.hpp  mesh.hpp  mirrored_buffer.hpp  model.hpp  orbit_camera.hpp  renderer.hpp  shader.hpp  vertex.hpp  window.hpp  window_keys.hpp
include/core/: constants.hpp  data_buffer.hpp  draw_command.hpp  handle.hpp  light.hpp  material.hpp  material_instance.hpp  material_props.hpp  mesh.hpp  mirrored_buffer.hpp  renderer.hpp  shader_defines.hpp  texture2d.hpp  texture2d_props.hpp  texture_slot.hpp  window.hpp
include/core/helpers/: gizmos.hpp
include/materials/: materials_factory.hpp
include/utils/: file_loading.hpp  image.hpp  logger.hpp
scripts/: format.cmd  format.sh
shaders/: attrib.glsl  default.frag  default.vert  framedata.glsl  gizmo.frag  grid.frag  lambert.frag  textures.glsl  unlit.frag
src/: context.cpp  data_buffer.cpp  demo.cpp  input.cpp  main.cpp  material.cpp  material_instance.cpp  material_props.cpp  mesh.cpp  mirrored_buffer.cpp  model.cpp  orbit_camera.cpp  renderer.cpp  shader.cpp  window.cpp
src/core/: context.cpp  data_buffer.cpp  material.cpp  material_instance.cpp  material_props.cpp  mesh.cpp  mirrored_buffer.cpp  renderer.cpp  texture2d.cpp  window.cpp
src/core/helpers/: gizmos.cpp
src/utils/: file_loading.cpp  logger.cpp
